# udp-director

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  config.example.yaml  config.loadbalancing.example.yaml  config.multiport.example.yaml  dockerpush.sh
.github/workflows/: README.md  ci.yml  docker.yml
Docs/: AddressTypeFeature.md  AnnotationSupport.md  CHANGELOG.md  Changelog.md  CodingGuidelines.md  DOCKER_REGISTRY.md  DockerRegistry.md  Metrics.md  MultiPortSupport.md  PodRoutingGuide.md  ProjectSummary.md  QUICK_REFERENCE.md  QuickReference.md  TECHNICAL_REFERENCE.md  TESTING.md  TechnicalReference.md  Testing.md  load-balancing.md
examples/: client_example.rs
k8s/: README.md  configmap-advanced-annotations.yaml  configmap-agones-gameserver.yaml  configmap-agones-service.yaml  configmap-dns.yaml  configmap-ntp.yaml  configmap-pods-multiport.yaml  configmap-pods.yaml  deployment.yaml  example-pod-deployment.yaml  k8s.md  podsecurity.yaml  rbac.yaml
src/: config.rs  k8s_client.rs  load_balancer.rs  main.rs  metrics.rs  metrics_server.rs  proxy.rs  query_server.rs  resource_monitor.rs  session.rs  token_cache.rs
